# prelegal

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/cerebras/: SKILL.md
backend/: __init__.py  auth.py  auth_old.py  database.py  main.py  test_debug.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: document-preview.tsx  header.tsx  mnda-form.tsx
frontend/components/ui/: button.tsx  input.tsx  textarea.tsx
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: LICENSE
